--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "poppines" sans-serif;
+    font-family: "Poppines", sans-serif;
 }
 
 :root {
@@ -18,34 +18,18 @@ body {
     font-family: 'Inter', sans-serif !important;
 }
 
-/* body {
-    background: #F7F7F7;
-} */
-
-/* .App {
-    display: flex;
-} */
 .main {
     display: flex;
 }
 
-.layout {}
-
-.layout .layout-wrapper {
-    padding: 24px 24px;
-    margin-left: var(--sidebarWidth)
-}
-
 .dash-header {
+    width: 100%;
     height: var(--headerHeight);
     position: sticky;
-    /* background: #FFF; */
     background-image: linear-gradient(to bottom, #3ffdfd11 0%, #1e0a0b12 100%);
     top: 0;
     left: 0;
     right: 0;
-    /* border-bottom: 1px solid #E4E6E8; */
-    z-index: 999;
     padding: 0 20px;
     display: flex;
     align-items: center;
@@ -55,12 +39,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 40px;
 }
 
 .dash-header .wrapper .ls {
     /* flex: 1; */
-    /* display: flex;
-    align-items: flex-start; */
 }
 
 .dash-header .wrapper .ls .logo {
@@ -83,161 +66,16 @@ body {
     text-transform: uppercase;
 }
 
+.dash-header .wrapper .rs svg {
+    display: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+}
+
 /* home */
 
-.sidebar {
-    position: fixed;
-    /* margin-top: ; */
-    border-right: 1px solid #3c3c43;
-    width: 260px;
-    padding: 20px;
-    overflow: hidden;
 
-}
-
-.sidebar .wrapper {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    gap: 70px;
-}
-
-.sidebar .wrapper .circle {
-    width: 400px;
-    height: 400px;
-    border-radius: 1000px;
-    background-image: linear-gradient(to right, #f56745 0%, #45f5f6 100%);
-    filter: blur(90px);
-    opacity: 0.1;
-    left: -280px;
-    top: 20px;
-    position: absolute;
-}
-
-.sidebar-container {
-    margin-top: 30px;
-    z-index: 1;
-}
-
-.sidebar .wrapper .sidebar-container .ls {}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-    margin-bottom: 20px;
-    cursor: pointer;
-    position: relative;
-}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list .name:hover {
-    color: #45f5f6;
-}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list .name {
-    font-size: 16px;
-    line-height: 24px;
-    color: #cecece;
-    text-align: start;
-}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list .sidebar-icons {
-    position: relative;
-    display: flex;
-    align-items: center;
-    color: #fff;
-}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list .sidebar-icons svg {
-    font-size: 18px;
-}
-
-.sidebar .wrapper .sidebar-container .ls .sidebar-list .sidebar-icons .notes {
-    position: absolute;
-    right: -10px;
-    top: -5px;
-    width: 15px;
-    height: 15px;
-    background-color: #45f5f6;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-}
-
-.sidebar .wrapper .sidebar-container .create-btn {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    background-image: linear-gradient(to right, #45f5f6 0%, #01aeaf 100%);
-    width: 200px;
-    height: 45px;
-    color: #1b090a;
-    border-radius: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.sidebar .wrapper .rs {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-.sidebar .wrapper .rs .tyla-btn {
-    display: flex;
-    align-items: center;
-    padding: 0 10px;
-    gap: 5px;
-    width: 200px;
-    height: 60px;
-    background-color: #ffffff1e;
-    border-radius: 1000px;
-
-}
-
-.sidebar .wrapper .rs .end-logo {
-    width: 35px;
-}
-
-.sidebar .wrapper .rs .text {
-    display: flex;
-    flex-direction: column;
-    /* gap: 2px; */
-}
-
-.sidebar .wrapper .rs .text .title {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 20px;
-}
-
-.sidebar .wrapper .rs .text .about {
-    font-size: 12px;
-
-}
-
-.logout-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-}
-
-.logout-section .logOut_btn {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 20px;
-    color: #fff;
-}
-
-.logout-section .logOut_icon svg {
-    font-size: 14px;
-}
 
 /* mid-section */
 .mid-section {
